Add monkey scrollbar styles

--- a/scss/layout/_scrollbar.scss
+++ b/scss/layout/_scrollbar.scss
@@ -56,3 +56,14 @@
     border: 3px solid $color-base;
   }
 }
+
+.c-scrollbar--monkey .c-scrollbar {
+  &__track {
+    background: $color-shade-mid;
+  }
+
+  &__bar {
+    background: $color-shade-light;
+    box-shadow: 0 3px 0 $color-base, 0 -3px 0 $color-base;
+  }
+}
