Correct style of inline media toggler caret

--- a/scss/modules/messaging/_attachments.scss
+++ b/scss/modules/messaging/_attachments.scss
@@ -177,8 +177,9 @@
       }
     }
 
-    .ts_icon[class*=ts_icon_caret]:hover {
-      color: $base-link-color-active;
+    .ts_icon.msg_inline_media_toggler:hover,
+    ts-icon.msg_inline_media_toggler:hover {
+      color: $base-link-color-active !important;
     }
   }
 
