Add styles for inline media toggler

--- a/scss/modules/messaging/_base.scss
+++ b/scss/modules/messaging/_base.scss
@@ -172,6 +172,7 @@ ts-message {
         color: $base-link-color !important;
       }
 
+      .msg_inline_media_toggler,
       .ts_icon_dropbox,
       a {
         color: $color-highlight !important;
