Add style for ephemeral messages

--- a/scss/modules/messaging/_base.scss
+++ b/scss/modules/messaging/_base.scss
@@ -198,6 +198,10 @@ ts-message {
   }
 }
 
+.ephemeral.message .message_content {
+  color: $base-font-color;
+}
+
 ts-mention {
   background: rgba($color-shade-lightest, 0.1) !important;
   color: $base-font-color !important;
