Add style for follow message description text

--- a/scss/modules/messaging/_base.scss
+++ b/scss/modules/messaging/_base.scss
@@ -397,20 +397,6 @@ ts-mention {
   }
 }
 
-#message_edit_container,
-.inline_message_input_container {
-  .message_input {
-    color: $base-font-color;
-  }
-}
-
-#message_edit_container .message_input {
-  background: $color-shade-light;
-  border-color: $color-shade-dark;
-  color: $base-font-color;
-
-  &.focus {
-    border-color: $color-shade-dark;
-    box-shadow: 0 0 7px $color-shadow-light;
-  }
+#toggle-subscription-status .subscription_desc {
+  color: $color-highlight;
 }
