--- a/scss/modules/modals/_direct-messages.scss
+++ b/scss/modules/modals/_direct-messages.scss
@@ -18,8 +18,8 @@
 
   #im_list_container:not(.keyboard_active).not_scrolling .im_browser_row:hover,
   .im_browser_row.highlighted {
-    background: $color-shade-darkest;
-    border: 1px solid $color-shade-light;
+    background: $color-shade-darkest !important;
+    border: 1px solid $color-shade-light !important;
   }
 }
 
