Add styles for shortcuts flexpane

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -46,6 +46,7 @@
 @import "modules/flexpane/mentions";
 @import "modules/flexpane/reactions";
 @import "modules/flexpane/search";
+@import "modules/flexpane/shortcuts";
 @import "modules/flexpane/team";
 @import "modules/flexpane/threads";
 @import "modules/flexpane/whats-new";
