Add overrides for new shared team member styles

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -51,6 +51,8 @@
 @import "modules/flexpane/threads";
 @import "modules/flexpane/whats-new";
 
+@import "modules/team/base";
+
 @import "modules/emojis/base";
 @import "modules/emojis/current_status";
 @import "modules/emojis/reactions";
