Add styles for enterprise analytics

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -84,6 +84,7 @@
 @import "modules/pages/admin/billing";
 @import "modules/pages/admin/customize";
 @import "modules/pages/admin/directory";
+@import "modules/pages/admin/enterprise";
 @import "modules/pages/admin/files";
 @import "modules/pages/admin/help";
 @import "modules/pages/admin/nav";
