Add style for messaging input mention button

--- a/scss/modules/inputs/_messaging.scss
+++ b/scss/modules/inputs/_messaging.scss
@@ -45,6 +45,10 @@
     border-left: 0;
     color: $base-font-color;
   }
+
+  .msg_mentions_button:hover {
+    color: $base-font-color;
+  }
 }
 
 #msg_input {
