Remove old ID from selectors for team member items and filter selects

--- a/scss/modules/flexpane/_team.scss
+++ b/scss/modules/flexpane/_team.scss
@@ -143,7 +143,7 @@
   }
 }
 
-.unify_user #client-ui .searchable_member_list .team_list_item {
+#client-ui .searchable_member_list .team_list_item {
   border-bottom-color: $color-shade-darkest;
 
   &:hover {
