Add style for message mentions button

--- a/scss/modules/inputs/_messaging.scss
+++ b/scss/modules/inputs/_messaging.scss
@@ -46,8 +46,12 @@
     color: $base-font-color;
   }
 
-  .msg_mentions_button:hover {
-    color: $base-font-color;
+  .msg_mentions_button {
+    color: $color-highlight;
+
+    &:hover {
+      color: $base-font-color;
+    }
   }
 }
 
