Add style for new message preview in preferences modal

--- a/scss/modules/modals/_preferences.scss
+++ b/scss/modules/modals/_preferences.scss
@@ -99,6 +99,10 @@
     border-bottom-color: $color-shade-darkest;
     border-top-color: $color-shade-darkest;
   }
+
+  .display_real_names_block_sample {
+    background: $color-base;
+  }
 }
 
 .sidebar_menu_list_item {
