Add style for focused message input mentions button

--- a/scss/modules/inputs/_messaging.scss
+++ b/scss/modules/inputs/_messaging.scss
@@ -44,6 +44,10 @@
     border-color: $color-shade-mid;
     border-left: 0;
     color: $base-font-color;
+
+    &.focus ~ .msg_mentions_button:not(.hover) {
+      color: $base-font-color;
+    }
   }
 
   .msg_mentions_button {
