--- a/scss/modules/header/_base.scss
+++ b/scss/modules/header/_base.scss
@@ -48,25 +48,15 @@
   color: $color-highlight;
 }
 
-.channel_header_info {
-  .star,
-  button {
-    color: $base-link-color;
-  }
+.channel_header_info button {
+  color: $base-link-color;
 }
 
 .channel_title_info {
   background: $color-base;
   color: $color-highlight;
 
-  .divider_bar {
-    background: $color-shade-dark;
-  }
-
-  .channel_details_toggle {
-    color: $color-highlight;
-  }
-
+  .channel_details_toggle,
   .channel_actions_toggle {
     color: $color-highlight;
   }
