Correct flexpane meta styles

--- a/scss/modules/flexpane/_threads.scss
+++ b/scss/modules/flexpane/_threads.scss
@@ -28,7 +28,7 @@
     color: $base-font-color;
 
     ts-icon.ts_icon_question_circle {
-      color: $color-highlight;
+      color: $color-highlight !important;
     }
   }
 
