Correct broken selectors

--- a/scss/modules/header/_search.scss
+++ b/scss/modules/header/_search.scss
@@ -22,7 +22,7 @@
   color: $base-font-color;
 }
 
-.flexbox_client #search_container {
+#search_container {
   .search_input {
     background: transparent;
   }
