--- a/scss/modules/modals/_channel.scss
+++ b/scss/modules/modals/_channel.scss
@@ -44,8 +44,8 @@
 }
 
 #channel_invite_modal {
-  #channel_invite_container:not(.keyboard_active).not_scrolling .channel_invite_row:hover,
-  .channel_invite_row.highlighted {
+  #channel_invite_container:not(.keyboard_active).not_scrolling .channel_invite_row:not(.disabled):hover,
+  .channel_invite_row.highlighted:not(.disabled) {
     background: $color-base;
     border-color: $color-shade-dark;
   }
