Add styles for developer apps page

--- a/scss/modules/_color-overrides.scss
+++ b/scss/modules/_color-overrides.scss
@@ -44,6 +44,7 @@
   background-color: $color-red !important;
 }
 
+.off_white_bg,
 .neutral_white_bg {
   background-color: $color-shade-dark !important;
 }
