Add style for channel mute help text

--- a/scss/modules/modals/_channel.scss
+++ b/scss/modules/modals/_channel.scss
@@ -68,6 +68,9 @@
     color: $base-font-color;
   }
 
+  &__mute_help_text {
+    color: $color-highlight;
+  }
 }
 
 .channel_prefs_notifications_table {
